--- a/composer.json
+++ b/composer.json
@@ -1,14 +1,20 @@
 {
-    "name": "xeoncross/pocco",
-    "description": "The PHP documentation generator (A Docco clone)",
-    "license": "MIT License",
-    "authors": [
-        {
-            "name": "Xeoncross",
-            "email": "david@xeoncross.com"
-        }
-    ],
-    "require": {
-
-    }
+	"name": "xeoncross/pocco",
+	"description": "The PHP documentation generator (A Docco clone)",
+	"license": "MIT License",
+	"authors": [
+		{
+			"name": "Xeoncross",
+			"email": "david@xeoncross.com"
+		}
+	],
+	"minimum-stability": "dev",
+	"require": {
+		"php": ">=5.2.0"
+	},
+	"autoload": {
+		"psr-0": {
+			"Xeoncross": "src/"
+		}
+	}
 }
